// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderShell — parity oracle > renders the agents view showing the copied-prompt state 1`] = `
"
    <main class="app-shell">
      <aside class="sidebar" aria-label="Navegação principal">
        <div class="brand-block">
          <span class="brand-mark">CD</span>
          <div>
            <strong>codexDojo</strong>
            <small>agent learning lab</small>
          </div>
        </div>
        <nav class="nav-stack"><button class="nav-button " type="button" data-view="overview">Painel</button><button class="nav-button is-active" type="button" data-view="agents">Agentes</button><button class="nav-button " type="button" data-view="cycle">Ciclo</button><button class="nav-button " type="button" data-view="roadmap">Roadmap</button><button class="nav-button " type="button" data-view="project">Projeto 01</button></nav>
      </aside>
      <div class="content-shell">
        
    <section class="workbench agents-view" aria-label="Agentes do codexDojo">
      <div class="section-heading">
        <p class="eyebrow">Equipe multiagente</p>
        <h2>Responsabilidades claras, saídas verificáveis</h2>
      </div>

      <div class="agent-list">
        
              <button class="agent-row " type="button" data-agent="mentor">
                <span>Mentor</span>
                <small>Adapta o aprendizado ao nível atual</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="curriculo">
                <span>Currículo</span>
                <small>Constrói a trilha progressiva</small>
              </button>
            
              <button class="agent-row is-active" type="button" data-agent="arquiteto">
                <span>Arquiteto</span>
                <small>Explica trade-offs e define arquitetura</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="implementador">
                <span>Implementador</span>
                <small>Escreve código com boas práticas</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="revisor">
                <span>Revisor de Código</span>
                <small>Revisa como engenheiro sênior</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="testes">
                <span>Testes</span>
                <small>Cria testes e benchmarks</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="metricas">
                <span>Métricas</span>
                <small>Mede evolução e compara soluções</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="devops">
                <span>DevOps</span>
                <small>Ensina entrega e operação</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="pesquisador">
                <span>Pesquisador</span>
                <small>Busca práticas e docs oficiais</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="memoria">
                <span>Memória</span>
                <small>Preserva histórico e decisões</small>
              </button>
            
      </div>

      <article class="agent-detail">
        <div class="detail-topline">
          <span>strategy</span>
          <button class="icon-button" type="button" data-copy-agent="arquiteto" aria-label="Copiar prompt">
            Copiado
          </button>
        </div>
        <h3>Arquiteto</h3>
        <p>Escolher a arquitetura mais simples que testa a hipótese certa.</p>
        <div class="detail-columns">
          <div>
            <h4>Entradas</h4>
            <ul><li>requisitos</li><li>restrições</li><li>alternativas técnicas</li></ul>
          </div>
          <div>
            <h4>Saídas</h4>
            <ul><li>ADR</li><li>diagrama</li><li>contratos de módulo</li></ul>
          </div>
        </div>
        <div class="gate-box">
          <span>Gate</span>
          <p>Toda decisão registra alternativa rejeitada e motivo.</p>
        </div>
        <pre class="prompt-box"><code>Você é o Arquiteto. Compare alternativas, escolha a menor arquitetura adequada e documente trade-offs em ADRs curtos.</code></pre>
      </article>
    </section>
  
      </div>
    </main>
  "
`;

exports[`renderShell — parity oracle > renders the agents view with a selected agent 1`] = `
"
    <main class="app-shell">
      <aside class="sidebar" aria-label="Navegação principal">
        <div class="brand-block">
          <span class="brand-mark">CD</span>
          <div>
            <strong>codexDojo</strong>
            <small>agent learning lab</small>
          </div>
        </div>
        <nav class="nav-stack"><button class="nav-button " type="button" data-view="overview">Painel</button><button class="nav-button is-active" type="button" data-view="agents">Agentes</button><button class="nav-button " type="button" data-view="cycle">Ciclo</button><button class="nav-button " type="button" data-view="roadmap">Roadmap</button><button class="nav-button " type="button" data-view="project">Projeto 01</button></nav>
      </aside>
      <div class="content-shell">
        
    <section class="workbench agents-view" aria-label="Agentes do codexDojo">
      <div class="section-heading">
        <p class="eyebrow">Equipe multiagente</p>
        <h2>Responsabilidades claras, saídas verificáveis</h2>
      </div>

      <div class="agent-list">
        
              <button class="agent-row " type="button" data-agent="mentor">
                <span>Mentor</span>
                <small>Adapta o aprendizado ao nível atual</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="curriculo">
                <span>Currículo</span>
                <small>Constrói a trilha progressiva</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="arquiteto">
                <span>Arquiteto</span>
                <small>Explica trade-offs e define arquitetura</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="implementador">
                <span>Implementador</span>
                <small>Escreve código com boas práticas</small>
              </button>
            
              <button class="agent-row is-active" type="button" data-agent="revisor">
                <span>Revisor de Código</span>
                <small>Revisa como engenheiro sênior</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="testes">
                <span>Testes</span>
                <small>Cria testes e benchmarks</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="metricas">
                <span>Métricas</span>
                <small>Mede evolução e compara soluções</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="devops">
                <span>DevOps</span>
                <small>Ensina entrega e operação</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="pesquisador">
                <span>Pesquisador</span>
                <small>Busca práticas e docs oficiais</small>
              </button>
            
              <button class="agent-row " type="button" data-agent="memoria">
                <span>Memória</span>
                <small>Preserva histórico e decisões</small>
              </button>
            
      </div>

      <article class="agent-detail">
        <div class="detail-topline">
          <span>quality</span>
          <button class="icon-button" type="button" data-copy-agent="revisor" aria-label="Copiar prompt">
            Copiar prompt
          </button>
        </div>
        <h3>Revisor de Código</h3>
        <p>Encontrar riscos de legibilidade, segurança, performance e manutenção.</p>
        <div class="detail-columns">
          <div>
            <h4>Entradas</h4>
            <ul><li>diff</li><li>spec</li><li>testes</li><li>execução local</li></ul>
          </div>
          <div>
            <h4>Saídas</h4>
            <ul><li>findings por severidade</li><li>patches sugeridos</li><li>riscos residuais</li></ul>
          </div>
        </div>
        <div class="gate-box">
          <span>Gate</span>
          <p>Finding sem evidência de arquivo, linha ou comportamento não passa.</p>
        </div>
        <pre class="prompt-box"><code>Você é o Revisor. Liste bugs primeiro, ordene por severidade e valide cada crítica contra a spec e a execução real.</code></pre>
      </article>
    </section>
  
      </div>
    </main>
  "
`;

exports[`renderShell — parity oracle > renders the cycle view with partial progress 1`] = `
"
    <main class="app-shell">
      <aside class="sidebar" aria-label="Navegação principal">
        <div class="brand-block">
          <span class="brand-mark">CD</span>
          <div>
            <strong>codexDojo</strong>
            <small>agent learning lab</small>
          </div>
        </div>
        <nav class="nav-stack"><button class="nav-button " type="button" data-view="overview">Painel</button><button class="nav-button " type="button" data-view="agents">Agentes</button><button class="nav-button is-active" type="button" data-view="cycle">Ciclo</button><button class="nav-button " type="button" data-view="roadmap">Roadmap</button><button class="nav-button " type="button" data-view="project">Projeto 01</button></nav>
      </aside>
      <div class="content-shell">
        
    <section class="workbench cycle-view" aria-label="Ciclo operacional">
      <div class="section-heading">
        <p class="eyebrow">Loop contínuo</p>
        <h2>Pequenos passos, evidência antes de avanço</h2>
      </div>

      <div class="cycle-board">
        <div class="timeline">
          
                <button class="timeline-step  is-complete" type="button" data-stage="diagnosticar">
                  <span>01</span>
                  Diagnosticar nível
                </button>
              
                <button class="timeline-step  is-complete" type="button" data-stage="escolher">
                  <span>02</span>
                  Escolher conceito
                </button>
              
                <button class="timeline-step  " type="button" data-stage="projetar">
                  <span>03</span>
                  Criar mini-projeto
                </button>
              
                <button class="timeline-step  " type="button" data-stage="implementar">
                  <span>04</span>
                  Implementar versão 1
                </button>
              
                <button class="timeline-step  " type="button" data-stage="testar">
                  <span>05</span>
                  Criar testes
                </button>
              
                <button class="timeline-step  " type="button" data-stage="medir">
                  <span>06</span>
                  Rodar métricas
                </button>
              
                <button class="timeline-step is-active " type="button" data-stage="revisar">
                  <span>07</span>
                  Revisar código
                </button>
              
                <button class="timeline-step  " type="button" data-stage="refatorar">
                  <span>08</span>
                  Refatorar
                </button>
              
                <button class="timeline-step  " type="button" data-stage="comparar">
                  <span>09</span>
                  Comparar alternativa
                </button>
              
                <button class="timeline-step  " type="button" data-stage="registrar">
                  <span>10</span>
                  Registrar aprendizado
                </button>
              
        </div>

        <article class="stage-detail">
          <div class="console-header">
            <span>Revisor</span>
            <span>20% validado</span>
          </div>
          <h3>Revisar código</h3>
          <dl class="evidence-list">
            <div>
              <dt>Evidência exigida</dt>
              <dd>findings com severidade</dd>
            </div>
            <div>
              <dt>Artefato gerado</dt>
              <dd>relatório de revisão</dd>
            </div>
          </dl>
          <button class="action-button" type="button" data-action="advance-stage">Concluir etapa</button>
        </article>
      </div>
    </section>
  
      </div>
    </main>
  "
`;

exports[`renderShell — parity oracle > renders the overview view 1`] = `
"
    <main class="app-shell">
      <aside class="sidebar" aria-label="Navegação principal">
        <div class="brand-block">
          <span class="brand-mark">CD</span>
          <div>
            <strong>codexDojo</strong>
            <small>agent learning lab</small>
          </div>
        </div>
        <nav class="nav-stack"><button class="nav-button is-active" type="button" data-view="overview">Painel</button><button class="nav-button " type="button" data-view="agents">Agentes</button><button class="nav-button " type="button" data-view="cycle">Ciclo</button><button class="nav-button " type="button" data-view="roadmap">Roadmap</button><button class="nav-button " type="button" data-view="project">Projeto 01</button></nav>
      </aside>
      <div class="content-shell">
        
    <section class="overview-grid" aria-label="Painel operacional">
      <article class="command-panel">
        <p class="eyebrow">Laboratório contínuo</p>
        <h1>codexDojo</h1>
        <p class="lead">
          Um painel para conduzir uma escola prática de engenharia de software com agentes,
          projetos incrementais, revisão, testes, métricas e memória de aprendizado.
        </p>
        <div class="primary-actions">
          <button class="action-button" type="button" data-view="cycle">Avançar ciclo</button>
          <button class="action-button secondary" type="button" data-view="agents">Ver agentes</button>
        </div>
      </article>

      <article class="status-console">
        <div class="console-header">
          <span>Estado do dojo</span>
          <span>20% do ciclo</span>
        </div>
        <div class="meter" aria-label="Progresso do ciclo">
          <span style="width: 20%"></span>
        </div>
        <dl class="stat-grid">
          <div><dt>Agentes</dt><dd>10</dd></div>
          <div><dt>Etapas</dt><dd>10</dd></div>
          <div><dt>Projetos</dt><dd>10</dd></div>
        </dl>
      </article>

      <article class="topology" aria-label="Mapa visual dos agentes">
        <button class="agent-node node-1" type="button" data-agent="mentor">
                <span>Mentor</span>
              </button><button class="agent-node node-2" type="button" data-agent="curriculo">
                <span>Currículo</span>
              </button><button class="agent-node node-3" type="button" data-agent="arquiteto">
                <span>Arquiteto</span>
              </button><button class="agent-node node-4" type="button" data-agent="implementador">
                <span>Implementador</span>
              </button><button class="agent-node node-5" type="button" data-agent="revisor">
                <span>Revisor de Código</span>
              </button><button class="agent-node node-6" type="button" data-agent="testes">
                <span>Testes</span>
              </button><button class="agent-node node-7" type="button" data-agent="metricas">
                <span>Métricas</span>
              </button><button class="agent-node node-8" type="button" data-agent="devops">
                <span>DevOps</span>
              </button><button class="agent-node node-9" type="button" data-agent="pesquisador">
                <span>Pesquisador</span>
              </button><button class="agent-node node-10" type="button" data-agent="memoria">
                <span>Memória</span>
              </button>
      </article>

      <article class="next-project">
        <p class="eyebrow">Primeiro projeto prático</p>
        <h2>CLI de tarefas em Python</h2>
        <p>Separar entrada, domínio e persistência sem framework.</p>
        <ul>
          <li>comandos create/list/done</li><li>testes unitários</li><li>README de uso</li>
        </ul>
      </article>

      <article class="metric-strip">
        
              <div class="metric-item">
                <span>Tempo de execução</span>
                <strong>mediana + p95</strong>
              </div>
            
              <div class="metric-item">
                <span>Cobertura do núcleo</span>
                <strong>>=80%</strong>
              </div>
            
              <div class="metric-item">
                <span>Mutation score</span>
                <strong>60-70%</strong>
              </div>
            
              <div class="metric-item">
                <span>Complexidade ciclomática</span>
                <strong>mediana <10</strong>
              </div>
            
              <div class="metric-item">
                <span>Dependência de IA</span>
                <strong>queda por ciclo</strong>
              </div>
            
      </article>

      <article class="cycle-strip">
        
              <button class="stage-chip" type="button" data-stage="diagnosticar">
                <span>Mentor</span>
                Diagnosticar nível
              </button>
            
              <button class="stage-chip" type="button" data-stage="escolher">
                <span>Currículo</span>
                Escolher conceito
              </button>
            
              <button class="stage-chip" type="button" data-stage="projetar">
                <span>Arquiteto</span>
                Criar mini-projeto
              </button>
            
              <button class="stage-chip" type="button" data-stage="implementar">
                <span>Implementador</span>
                Implementar versão 1
              </button>
            
              <button class="stage-chip" type="button" data-stage="testar">
                <span>Testes</span>
                Criar testes
              </button>
            
              <button class="stage-chip" type="button" data-stage="medir">
                <span>Métricas</span>
                Rodar métricas
              </button>
            
      </article>
    </section>
  
      </div>
    </main>
  "
`;

exports[`renderShell — parity oracle > renders the project view 1`] = `
"
    <main class="app-shell">
      <aside class="sidebar" aria-label="Navegação principal">
        <div class="brand-block">
          <span class="brand-mark">CD</span>
          <div>
            <strong>codexDojo</strong>
            <small>agent learning lab</small>
          </div>
        </div>
        <nav class="nav-stack"><button class="nav-button " type="button" data-view="overview">Painel</button><button class="nav-button " type="button" data-view="agents">Agentes</button><button class="nav-button " type="button" data-view="cycle">Ciclo</button><button class="nav-button " type="button" data-view="roadmap">Roadmap</button><button class="nav-button is-active" type="button" data-view="project">Projeto 01</button></nav>
      </aside>
      <div class="content-shell">
        
    <section class="workbench project-view" aria-label="Primeiro projeto prático">
      <div class="section-heading">
        <p class="eyebrow">Projeto 01</p>
        <h2>CLI de tarefas em Python</h2>
      </div>

      <div class="briefing-grid">
        <article class="briefing-main">
          <h3>Objetivo de aprendizado</h3>
          <p>Separar entrada, domínio e persistência sem framework.</p>
          <h3>Requisitos funcionais</h3>
          <ul>
            <li>Criar tarefas com título e prioridade.</li>
            <li>Listar tarefas pendentes e concluídas.</li>
            <li>Marcar uma tarefa como concluída por identificador.</li>
            <li>Persistir o estado localmente em arquivo JSON.</li>
          </ul>
          <h3>Requisitos não funcionais</h3>
          <ul>
            <li>Comandos previsíveis, mensagens de erro claras e testes rápidos.</li>
            <li>Domínio separado da interface de linha de comando.</li>
            <li>Sem IA escrevendo a solução antes da tentativa inicial.</li>
          </ul>
        </article>

        <aside class="quality-card">
          <h3>Definition of Done</h3>
          <ul>
            <li>comandos create/list/done</li><li>testes unitários</li><li>README de uso</li>
            <li>Relatório de revisão com uma melhoria aplicada.</li>
            <li>Comparação curta com uma API HTTP futura.</li>
          </ul>
        </aside>
      </div>
    </section>
  
      </div>
    </main>
  "
`;

exports[`renderShell — parity oracle > renders the roadmap view filtered to apps 1`] = `
"
    <main class="app-shell">
      <aside class="sidebar" aria-label="Navegação principal">
        <div class="brand-block">
          <span class="brand-mark">CD</span>
          <div>
            <strong>codexDojo</strong>
            <small>agent learning lab</small>
          </div>
        </div>
        <nav class="nav-stack"><button class="nav-button " type="button" data-view="overview">Painel</button><button class="nav-button " type="button" data-view="agents">Agentes</button><button class="nav-button " type="button" data-view="cycle">Ciclo</button><button class="nav-button is-active" type="button" data-view="roadmap">Roadmap</button><button class="nav-button " type="button" data-view="project">Projeto 01</button></nav>
      </aside>
      <div class="content-shell">
        
    <section class="workbench roadmap-view" aria-label="Roadmap de projetos">
      <div class="section-heading">
        <p class="eyebrow">Trilha viva</p>
        <h2>Projetos incrementais que viram sistemas robustos</h2>
      </div>

      <div class="filter-row">
        <button class="filter-button " type="button" data-filter="all">Todos</button>
        <button class="filter-button " type="button" data-filter="fundamentos">Fundamentos</button><button class="filter-button is-active" type="button" data-filter="apps">Aplicações</button><button class="filter-button " type="button" data-filter="dados">Dados</button><button class="filter-button " type="button" data-filter="escala">Escala</button><button class="filter-button " type="button" data-filter="ia">IA</button>
      </div>

      <div class="project-grid">
        
              <article class="project-card">
                <div class="project-meta">
                  <span>P02</span>
                  <span>Nível 2</span>
                </div>
                <h3>API REST de tarefas com FastAPI</h3>
                <p>Transformar domínio local em contrato HTTP testável.</p>
                <dl>
                  <div><dt>Linguagem</dt><dd>Python</dd></div>
                  <div><dt>Arquitetura</dt><dd>HTTP boundary + validação + service layer</dd></div>
                </dl>
              </article>
            
              <article class="project-card">
                <div class="project-meta">
                  <span>P03</span>
                  <span>Nível 2</span>
                </div>
                <h3>Mesma API em Node.js/TypeScript</h3>
                <p>Comparar tipagem, ergonomia e async entre Python e TS.</p>
                <dl>
                  <div><dt>Linguagem</dt><dd>TypeScript</dd></div>
                  <div><dt>Arquitetura</dt><dd>Hono + Zod + service layer</dd></div>
                </dl>
              </article>
            
              <article class="project-card">
                <div class="project-meta">
                  <span>P05</span>
                  <span>Nível 3</span>
                </div>
                <h3>Autenticação e autorização</h3>
                <p>Separar identidade, sessão, permissão e auditoria.</p>
                <dl>
                  <div><dt>Linguagem</dt><dd>TypeScript</dd></div>
                  <div><dt>Arquitetura</dt><dd>auth boundary + policies explícitas</dd></div>
                </dl>
              </article>
            
      </div>
    </section>
  
      </div>
    </main>
  "
`;
